--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "gsap": "^3.6.0",
+    "jquery": "^3.6.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "swiper": "^6.5.0",
+    "tilt.js": "^1.2.1",
     "vue": "^2.6.11",
+    "vue-icon": "^2.2.0",
     "vue-router": "^3.2.0",
+    "vue-tilt.js": "^1.1.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
