--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.6.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "sweetalert2": "^10.15.6",
     "swiper": "^6.5.0",
     "tilt.js": "^1.2.1",
     "vue": "^2.6.11",
