--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "jquery": "^3.6.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "pnltri": "^2.1.1",
     "sweetalert2": "^10.15.6",
     "swiper": "^6.5.0",
+    "three": "^0.126.1",
+    "three-bas": "^2.12.0",
     "tilt.js": "^1.2.1",
     "vue": "^2.6.11",
     "vue-icon": "^2.2.0",
