--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "aos": "^2.3.4",
+    "chart.js": "^2.5.0",
     "core-js": "^3.6.5",
+    "d3": "^6.6.2",
     "font-awesome": "^4.7.0",
-    "gsap": "^3.6.0",
+    "gsap": "^3.6.1",
     "jquery": "^3.6.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "materialize-css": "^1.0.0",
     "pnltri": "^2.1.1",
+    "rellax": "^1.12.1",
     "sweetalert2": "^10.15.6",
     "swiper": "^6.5.0",
-    "three": "^0.126.1",
+    "three": "^0.124.0",
     "three-bas": "^2.12.0",
+    "three-geometry-data": "^1.0.1",
     "tilt.js": "^1.2.1",
     "vue": "^2.6.11",
     "vue-icon": "^2.2.0",
@@ -31,12 +37,17 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.35",
+    "postcss-focus": "^5.0.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
