--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "aos": "^2.3.4",
+    "bootstrap": "^4.6.0",
     "chart.js": "^2.5.0",
     "core-js": "^3.6.5",
     "d3": "^6.6.2",
@@ -23,7 +24,9 @@
     "less-loader": "^7.3.0",
     "materialize-css": "^1.0.0",
     "pnltri": "^2.1.1",
+    "popper.js": "^1.16.1",
     "rellax": "^1.12.1",
+    "rxjs": "^6.6.7",
     "sweetalert2": "^10.15.6",
     "swiper": "^6.5.0",
     "three": "^0.124.0",
