--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.5.0",
     "core-js": "^3.6.5",
     "d3": "^6.6.2",
+    "face-api.js": "^0.22.2",
     "font-awesome": "^4.7.0",
     "gsap": "^3.6.1",
     "jquery": "^3.6.0",
