--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "d3": "^6.6.2",
     "face-api.js": "^0.22.2",
+    "firebase": "^8.4.2",
     "font-awesome": "^4.7.0",
     "gsap": "^3.6.1",
     "jquery": "^3.6.0",
